--- a/assets/styles/scss/_deleteData.scss
+++ b/assets/styles/scss/_deleteData.scss
@@ -78,12 +78,12 @@
 .slide-text {
     color: var(--accentColor);
     font-weight: bold;
-    left: 40%;
+    left: 41%;
     line-height: 3.75rem;
     pointer-events: none;
     position: absolute;
     text-align: center;
-    width: 50%;
+    width: fit-content;
     z-index: 1;
 }
 
